# DialogBot2023

./: .gitignore  CMakeLists.txt  README.md
bot/inc/: bot.h  bot.h.in
bot/src/: CMakeLists.txt  bot.cpp
files/: PID.txt  admins.txt  token.txt
postgres/inc/: pqxx_conn.h
postgres/src/: CMakeLists.txt  pqxx_bot.cpp  pqxx_conn.cpp
scripts/: bot_check.sh  bot_restart.sh  bot_start.sh  count_string.py  demo_table.sql  format.sh  install.sh  start_psql.sh  tables.sql  test_values.sql
user/inc/: graph.h  nodes.h  user.h
user/src/: CMakeLists.txt  graph.cpp  nodes.cpp  user.cpp
utils/inc/: crypt_id.h  log.h
utils/inc/files/: csv.h  file.h  pid.h
utils/inc/telegram/: constructor.h
utils/inc/time/: time_treatment.h
utils/src/: CMakeLists.txt  crypt_id.cpp  log.cpp  pid.cpp
utils/src/files/: CMakeLists.txt  bot_file.cpp  csv.cpp  file.cpp  pid.cpp
utils/src/telegram/: CMakeLists.txt  constructor.cpp
utils/src/time/: CMakeLists.txt  time_treatment.cpp
